css/styles.css
body {
  font-family: 'Open Sans', sans-serif;
  font-size: 18px;
  line-height: 1.8;
  color: #f5f6f7;
}
p {
  font-size: 18px;
  font-family: 'Open Sans', sans-serif;
}

blockquote {
  font-family: 'Open Sans', sans-serif;
  border-left: 4px solid #eabc00;
}

h3 {
  letter-spacing: 3px;
  font-family: 'Old Standard TT', serif;
}

h1 {
  padding-top: 40px;
  letter-spacing: 3px;
  font-family: 'Old Standard TT', serif;
  font-size: 25px;
  font-weight: bold;
}

.linie {
  border-bottom: 1px solid #eabc00;
  width: 30%;
  margin: auto;
  padding: 20px;
}

.gray {
  filter: grayscale(100%);
}

.gray:hover {
  filter: grayscale(0%);
  cursor: pointer;
  transition: filter 0.5s;
}

.logo {
  width: 30%;
}

.margin {
  margin-bottom: 45px;
}

.bg-1 {
  padding: 200px;
  color: #262626 !important;
  font-weight: bold !important;
  background-image: url(../images/abendstimmung.jpg);
  height: 400px;
}
.bg-2 {
  background-color: #262626;
  color: #ffffff;
  padding: 100px;
  font-weight: bold !important;
}
.bg-3 {
  background-image: url(../images/candle.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 100px;
  color: #262626 !important;
}
.bg-4 {
  background-color: #2f2f2f; /* Black Gray */
  color: #fff;
  padding: 100px;
}

.bg-5 {
  color: #262626;
  padding: 100px;
}

.container-fluid {
  padding-top: 70px;
  padding-bottom: 70px;
}
.navbar {
  padding-top: 15px;
  padding-bottom: 15px;
  border: 0;
  border-radius: 0;
  margin-bottom: 0;
  font-size: 14px;
  letter-spacing: 5px;
}
.navbar-nav li a:hover {
  color: #eabc00 !important;
  border-bottom: 0.5px solid #eabc00;
  font-weight: bold;
}

#navbar {
  overflow: hidden;
  background-color: #333;
}

.panel-group {
  color: black;
}

.panel-footer {
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.panel-title {
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
  text-decoration: none;
}

footer a {
  text-decoration: none !important;
  color: white;
}
footer a:hover {
  font-weight: bold;
  color: white;
  border-bottom: 0.5px solid #eabc00;
}

.row > .column {
  padding: 0 8px;
}

.row:after {
  content: '';
  display: table;
  clear: both;
}

/* Create four equal columns that floats next to eachother */
.column {
  float: left;
  width: 25%;
}

.row {
}

/* The Modal (background) */
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: black;
}

/* Modal Content */
.modal-content {
  position: relative;
  background-color: #fefefe;
  margin: auto;
  padding: 0;
  width: 90%;
  max-width: 1200px;
}

/* The Close Button */
.close {
  color: white;
  position: absolute;
  top: 10px;
  right: 25px;
  font-size: 35px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #999;
  text-decoration: none;
  cursor: pointer;
}

/* Hide the slides by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -50px;
  color: white;
  font-weight: bold;
  font-size: 20px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
  -webkit-user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* Caption text */
.caption-container {
  text-align: center;
  background-color: black;
  padding: 2px 16px;
  color: white;
}

img.demo {
  opacity: 0.6;
  width: 100%;
}

.active,
.demo:hover {
  opacity: 1;
}

img.hover-shadow {
  transition: 0.3s;
}

.hover-shadow:hover {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

